--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package": "electron-packager ./ PokemonMap --all --out ~/Desktop/PokemonGo --overwrite --icon=./app/img/icon.icns"
+    "package": "electron-packager ./ PokemonMap --all --out ./build --overwrite --icon=./app/img/icon.icns"
   },
   "keywords": [
     "Pokemon Go"
